# ShaderManager

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
ShaderMake/: CMakeLists.txt
ShaderMake/src/: main.cpp
ShaderMakeOutput/: CMakeLists.txt
ShaderMakeOutput/include/: .gitignore  DLLMacro.hpp  ShaderMake.hpp  dxil.fbs  dxil_pipeline.fbs  shader_output.fbs
ShaderMakeOutput/lib/: ShaderMake.cpp
ShaderManager/: CMakeLists.txt
ShaderManager/include/: DLLMacro.hpp  ShaderManager.hpp
ShaderManager/lib/: ShaderManager.cpp
ShaderManagerCLI/: CMakeLists.txt
ShaderManagerCLI/src/: main.cpp
installers/: dxc.cmake.json  flatbuffers.cmake.json
patches/: dxc.patch  flatbuffers.patch
